sass/custom/_styles.scss
// This File is imported last, and will override other styles in the cascade
// Add styles here to make changes without digging in too much

//main
@font-face {
  font-family: "MuseoSlab500";
  src: url("/../fonts/museo/Museo_Slab_500-webfont.eot");
  src: url("/../fonts/museo/Museo_Slab_500-webfont.eot?#iefix") format('embedded-opentype'),
       url("/../fonts/museo/Museo_Slab_500-webfont.woff") format('woff'),
       url("/../fonts/museo/Museo_Slab_500-webfont.ttf") format('truetype'),
       url("/../fonts/museo/Museo_Slab_500-webfont.svg#MuseoSlab500") format('svg');
  font-weight: normal;
  font-style: normal;
}

body { font: 14px/21px helvetica, arial, sans-serif; -webkit-font-smoothing: antialiased;-webkit-text-size-adjust: 100%; }

h1, h2, h3, h4, h5, h6 { text-rendering: optimizelegibility; font-family: MuseoSlab500,
helvetica, arial, sans-serif; font-weight: normal;}
h1 { font-size: 24px; color: $text-color-dark; }
h2 { text-transform: uppercase; font-size: 14px; color: $text-color-light; }

.container { position: relative; width:960px; margin: 0 auto; padding: 0 0 0 0; }
body div, body div div { background: 0; border: 0; }
#content { margin: 0 270px 0 10px; background: $page-bg url("/../images/noise.png") repeat top left; }

// navigation
nav { width: 990px; position: relative; display: inline-block; padding: 0em; line-height: 1em; background: $nav-bg; margin: 0 -15px; box-shadow: inset 0px 0px 25px rgba(255, 255, 255, 0.3); -moz-transition: box-shadow 0.2s ease-out; -o-transition: box-shadow 0.2s ease-out; -webkit-transition: box-shadow 0.2s ease-out; -ms-transition: box-shadow 0.2s ease-out; letter-spacing: 0.5px; direction:ltr; font-family: helvetica, arial, sans serif; }
nav:before   { pointer-events: none; content: ""; position: absolute; top: 4px; left: 0; right: 0; border: 1.1em solid; border-color: transparent $main-bg; }
nav ul#main-navigation { margin: 0; text-align: center; }
nav ul#main-navigation li { line-height: 18px; margin-bottom: 12px; display: inline; }
nav ul#main-navigation li a { display: inline-block; margin: 0 20px; padding: 10px 10px; color: $nav-color; text-decoration: none; }
nav ul#main-navigation li a:hover { color: $nav-color-hover; }

// sidebar
aside.sidebar { border: 0; text-shadow: none; padding: 0 10px 10px 50px; width: 200px; background: #383838 url("/../images/noise.png") repeat top left; }
aside.sidebar h1 { color: $sidebar-color; }
aside.sidebar a { font-size: 14px; text-decoration: none; }
aside.sidebar a:hover { text-decoration: underline; }
aside.sidebar li, aside.sidebar section h1 { border: 0; }
.side-shadow-border, aside.sidebar section h1, aside.sidebar li { -moz-box-shadow: #fff 0px 0px; -webkit-box-shadow: #fff 0px 0px; -o-box-shadow: #fff 0px 0px; box-shadow: #fff 0px 0px; }
img.side-rss-img { width: 13px; }
aside.sidebar img { border: none; }

// footer
a.poweredimage { display: block; width: 305px; height: 25px; background: url('/images/footer-powered.png') top no-repeat; text-indent: -99999px; }
a.twitterimage {display: block; width: 35px; height: 25px; background: url('/../images/twitter.png') top no-repeat; text-indent: -99999px; background-position: 0 4px;}
a.twitterimage:hover {background-position: 0 -18px;}
a.emailimage {display: block; width: 30px; height: 25px; background: url('/../images/email1.png') top no-repeat; text-indent: -99999px; background-position: 0 5px;}
a.emailimage:hover {background-position: 0 -24px;}

